  * XvMC support for hardware accelerated mpeg2 playback (-V xvmc)
  * Fix some errors in sound state when exiting xine and using alsa.
  * new tvtime/deinterlacer algorithm scalerbob
  * new tvtime/deinterlacer option "cheap mode": skips format conversion.
    (uses less cpu but it's not 100% accurate)
  * encoding of URL with multibyte characters in MMS
  * fix ssa subtitle handling
           
xine-lib (1-rc1)
  * fix incorrect colours when blending frame with a big-endian RGB pixel format
  * add support for chroma keyed overlay graphics to video_out_pgx64
  * add support for double and multi-buffering to video_out_pgx64
  * libdvdnav: fix some undetected stills (fixes "Red Dragon" RC2 scene selection)
  * video output plugin for libstk
  * bugfix: detection of external subtitle formats
  * support for arbitrary aspect ratios
  * DVD menu button group handling in spu decoders (software and dxr3)
    (fixes wrong initial menu highlights on "Star Trek 3" SE RC2 for the dxr3)
  * get the correct duration and bitrate for MP3s with Xing headers (VBR)
  * fix alignment check in configure (fixes weird colours with MPEG2 on PPC)
  * improved expand plugin (increased performance, allow subtitle shifting)
  * support saving streams to local files.
    example: xine stream_mrl#save:file.raw
  * MPEG demuxer fixes (support VLC streams)
  * simple VCR functionality added to DVB input plugin
    just press MENU2 (that is for example F2 in gxine) to start/stop recording
  * display channel number and name in DVB mode
  * first steps towards AMD64 support (thanks to Adrian Schroeter of SuSE)
  * Add support for 4.1 and 5 channel speaker setups.
  * Allow a52 passthru to be switchied on and off without having to exit xine.
    One has to stop playing, and then restart playing for it to activate.
  * Fix .mp3 content detection for .mp3 files with a header or ID3.
  * Fix detection of mpeg1/mpeg2 in demux_mpeg_pes.