@@ -6,6 +6,7 @@ xine-lib (1-rc2)
     (uses less cpu but it's not 100% accurate)
   * encoding of URL with multibyte characters in MMS
   * fix ssa subtitle handling
+  * don't find out id3 info in mp3 files saved from non-seekable inputs
            
 xine-lib (1-rc1)
   * fix incorrect colours when blending frame with a big-endian RGB pixel format
